--- a/app/jfrog-logs/default/data/ui/views/xray.xml
+++ b/app/jfrog-logs/default/data/ui/views/xray.xml
@@ -92,7 +92,7 @@
       <single>
         <title>Watches</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ | stats dc(signature) as watches</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ | stats dc(signature) as watches</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -107,7 +107,7 @@
       <single>
         <title>Vulnerabilities</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ category="Security" | stats count as Vulnerabilities</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ category="Security" | stats count as Vulnerabilities</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -121,7 +121,7 @@
       <single>
         <title>License Issues</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ category="License" | stats count</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ category="License" | stats count</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -135,7 +135,7 @@
       <single>
         <title>Violations</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ | stats count</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ | stats count</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -149,7 +149,7 @@
       <single>
         <title>Infected Components</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ | stats dc(infected_components{})</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ | stats dc(infected_components{})</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -163,7 +163,7 @@
       <single>
         <title>Impacted Artifacts</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ | stats dc(impacted_artifacts{})</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ | stats dc(impacted_artifacts{})</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -179,7 +179,7 @@
       <chart>
         <title>Violations per Watch</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ | stats count by signature</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ | stats count by signature</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -194,7 +194,7 @@
       <chart>
         <title>Violations Severity</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ severity!=Unknown $vulnerability_control$ | stats count by severity</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ severity!=Unknown $vulnerability_control$ | stats count by severity</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -211,7 +211,7 @@
       <chart>
         <title>Violations by Policy</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ | stats count by matched_policies{}.policy</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ | stats count by matched_policies{}.policy</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -226,7 +226,7 @@
       <chart>
         <title>Violations by Rule</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ | stats count by matched_policies{}.rule</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ | stats count by matched_policies{}.rule</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -243,7 +243,7 @@
       <chart>
         <title>Violation Types over Time (Stats)</title>
         <search>
-          <query>index="xray_violations" category!=NULL $vulnerability_control$ | timechart count by category</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" category!=NULL $vulnerability_control$ | timechart count by category</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -259,7 +259,7 @@
       <chart>
         <title>Violations over Time(By Severity)</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ severity!="unknown"  | timechart  count by severity</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ severity!="unknown"  | timechart  count by severity</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -278,7 +278,7 @@
       <chart>
         <title>Top Infected Components</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$  | stats count by infected_components{} | sort -count</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$  | stats count by infected_components{} | sort -count</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -294,7 +294,7 @@
       <chart>
         <title>Top Impacted Artifacts</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$  | stats count by impacted_artifacts{} | sort -count</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$  | stats count by impacted_artifacts{} | sort -count</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -314,7 +314,7 @@
       <chart>
         <title>Top Impacted Artifact by Count of User Downloads</title>
         <search>
-          <query>`default_index` $vulnerability_control$ log_source = "jfrog.rt.artifactory.access" action_response = "ACCEPTED DOWNLOAD" [search index=xray_violations impacted_artifacts_url{}=* | stats count by impacted_artifacts_url{} | rex field=impacted_artifacts_url{} "(?&lt;impacted_artifacts_url&gt;.*)" | return 500000 $impacted_artifacts_url ] | stats count(username) by repo_path | rename repo_path as impacted_artifact</query>
+          <query>`default_index` $vulnerability_control$ log_source = "jfrog.rt.artifactory.access" action_response = "ACCEPTED DOWNLOAD" [search log_source="jfrog.xray.siem.vulnerabilities" impacted_artifacts_url{}=* | stats count by impacted_artifacts_url{} | rex field=impacted_artifacts_url{} "(?&lt;impacted_artifacts_url&gt;.*)" | return 500000 $impacted_artifacts_url ] | stats count(username) by repo_path | rename repo_path as impacted_artifact</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -330,7 +330,7 @@
       <chart>
         <title>Top Impacted Artifact by Count of IP Download</title>
         <search>
-          <query>`default_index` $vulnerability_control$ log_source = "jfrog.rt.artifactory.access" action_response = "ACCEPTED DOWNLOAD" [search index=xray_violations impacted_artifacts_url{}=* | stats count by impacted_artifacts_url{} | rex field=impacted_artifacts_url{} "(?&lt;impacted_artifacts_url&gt;.*)" | return 500000 $impacted_artifacts_url ] | stats count(ip) by repo_path | rename repo_path as impacted_artifact</query>
+          <query>`default_index` $vulnerability_control$ log_source = "jfrog.rt.artifactory.access" action_response = "ACCEPTED DOWNLOAD" [search log_source="jfrog.xray.siem.vulnerabilities" impacted_artifacts_url{}=* | stats count by impacted_artifacts_url{} | rex field=impacted_artifacts_url{} "(?&lt;impacted_artifacts_url&gt;.*)" | return 500000 $impacted_artifacts_url ] | stats count(ip) by repo_path | rename repo_path as impacted_artifact</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -348,7 +348,7 @@
       <chart>
         <title>Top Vulnerabilities</title>
         <search>
-          <query>index="xray_violations" $vulnerability_control$ cve!="null" | stats count by cve | sort -count</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ cve!="null" | stats count by cve | sort -count</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -367,7 +367,7 @@
       <table>
         <title>Violation Details</title>
         <search>
-          <query>index=xray_violations $vulnerability_control$ impacted_artifacts_url{}=* | rex field=impacted_artifacts_url{} "(?&lt;repo_path&gt;.*)" | table impacted_artifacts_url{}, impacted_artifacts{}, created, severity, cve, repo_path, signature, description, url, category | join type=outer repo_path [search `default_index` log_source = "jfrog.rt.artifactory.access" action_response = "ACCEPTED DOWNLOAD" | stats count(username) as user_count, count(ip) as ip_count by repo_path] |  eval user_count=(if(user_count&gt;0,user_count,0)) | eval ip_count=(if(ip_count&gt;0,ip_count,0)) | fields - repo_path, - impacted_artifacts_url{} | sort -user_count</query>
+          <query>log_source="jfrog.xray.siem.vulnerabilities" $vulnerability_control$ impacted_artifacts{}=* | rex field=impacted_artifacts{} "(?&lt;impacted_artifacts&gt;.*)" | table impacted_artifacts{}, created, severity, cve, impacted_artifacts, signature, description, url, category | join type=outer impacted_artifacts [search `default_index` log_source = "jfrog.rt.artifactory.access" action_response = "ACCEPTED DOWNLOAD" | stats count(username) as user_count, count(ip) as ip_count by impacted_artifacts] |  eval user_count=(if(user_count&gt;0,user_count,0)) | eval ip_count=(if(ip_count&gt;0,ip_count,0)) | fields - impacted_artifacts | sort -user_count</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
           <refresh>1m</refresh>
@@ -377,7 +377,7 @@
         <option name="drilldown">row</option>
         <option name="refresh.display">progressbar</option>
         <drilldown>
-          <link target="_blank">search?q=%60default_index%60%20log_source%3D%22jfrog.rt.artifactory.access%22%20action_response%3D%22ACCEPTED%20DOWNLOAD%22%20%5Bsearch%20index%3Dxray_violations%20impacted_artifacts{}="$row.impacted_artifacts{}$"%20%7C%20stats%20count%20by%20impacted_artifacts_url%7B%7D%20%20%7C%20rex%20field%3Dimpacted_artifacts_url%7B%7D%20%22(%3F%3Crex_repo_path%3E.*)%22%20%7C%20return%20500000%20%24rex_repo_path%5D%20%7C%20table%20ip%2C%20_time%2C%20repo_path%2C%20username&amp;earliest=$field1.earliest$&amp;latest=$field1.latest$</link>
+          <link target="_blank">search?q=%60default_index%60%20log_source%3D%22jfrog.rt.artifactory.access%22%20action_response%3D%22ACCEPTED%20DOWNLOAD%22%20%5Bsearch%20log_source%3D%22jfrog.xray.siem.vulnerabilities%22%20impacted_artifacts{}="$row.impacted_artifacts{}$"%20%7C%20stats%20count%20by%20impacted_artifacts%7B%7D%20%20%7C%20rex%20field%3Dimpacted_artifacts%7B%7D%20%22(%3F%3Crex_repo_path%3E.*)%22%20%7C%20return%20500000%20%24rex_repo_path%5D%20%7C%20table%20ip%2C%20_time%2C%20impacted_artifacts%2C%20username&amp;earliest=$field1.earliest$&amp;latest=$field1.latest$</link>
         </drilldown>
       </table>
     </panel>
