--- a/app/jfrog-logs/default/data/ui/views/xray.xml
+++ b/app/jfrog-logs/default/data/ui/views/xray.xml
@@ -1,4 +1,4 @@
-<form script="jfrog-logs.js" stylesheet="jfrog-logs.css">
+<form version="1.1" script="jfrog-logs.js" stylesheet="jfrog-logs.css">
   <label>Xray</label>
   <description>Xray Log Analytics</description>
   <fieldset submitButton="true" autoRun="true">
